fix input line readability

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,6 +97,7 @@ body {
 #input-line {
 	display: flex;
 	flex-direction: column;
+  margin-bottom: 4rem;
 }
 
 .command-block {
